added deb_ver_gt() to compare two version strings Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,9 @@
 /* "Path to cp executable" */
 #undef CP_BIN_PATH
 
+/* "Path to dpkg executable" */
+#undef DPKG_BIN_PATH
+
 /* "Path to git executable" */
 #undef GIT_BIN_PATH
 
