--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,7 @@ AC_SUBST(CGI_LIBS)
 AC_CHECK_LIB(sqlite3, sqlite3_open, [SQL_LIBS="-lsqlite3"], [echo "$0: libsqlite3 is missing" >&2; exit 2])
 AC_SUBST(SQL_LIBS)
 
+AC_PATH_PROG(DPKG_BIN_PATH, dpkg)
 AC_PATH_PROG(GIT_BIN_PATH, git)
 AC_PATH_PROG(TAR_BIN_PATH, tar)
 AC_PATH_PROG(CP_BIN_PATH, cp)
@@ -25,6 +26,7 @@ AC_PATH_PROG(MV_BIN_PATH, mv)
 AC_PATH_PROG(RM_BIN_PATH, rm)
 AC_PATH_PROG(MKDIR_BIN_PATH, mkdir)
 AC_PATH_PROG(MD5SUM_BIN_PATH, md5sum)
+AC_DEFINE_UNQUOTED([DPKG_BIN_PATH],   ["$DPKG_BIN_PATH"], ["Path to dpkg executable"])
 AC_DEFINE_UNQUOTED([GIT_BIN_PATH],    ["$GIT_BIN_PATH"], ["Path to git executable"])
 AC_DEFINE_UNQUOTED([TAR_BIN_PATH],    ["$TAR_BIN_PATH"], ["Path to tar executable"])
 AC_DEFINE_UNQUOTED([CP_BIN_PATH],     ["$CP_BIN_PATH"],  ["Path to cp executable"])
