change main.c to slindak.c as there's going to be more binaries Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = slindak
 
-slindak_SOURCES = main.c db.c overrides.c debfile.c slind.c lua.c util.c output.c messages.c
+slindak_SOURCES = slindak.c db.c overrides.c debfile.c slind.c lua.c util.c output.c messages.c
 slindak_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
 slindak_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS)
 
