add build-time detection of apt-ftparchive path Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -87,6 +87,7 @@ AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
 AMTAR = @AMTAR@
 AM_CFLAGS = @AM_CFLAGS@
+APTFA_BIN_PATH = @APTFA_BIN_PATH@
 AR = @AR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
