move generic functionality to a library Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -151,6 +151,7 @@ RM_BIN_PATH = @RM_BIN_PATH@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SLINDAK_SONAME = @SLINDAK_SONAME@
 SQL_LIBS = @SQL_LIBS@
 STRIP = @STRIP@
 TAR_BIN_PATH = @TAR_BIN_PATH@
