--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,9 @@ AC_SUBST(HACKER)
 BUILD_DATE="`822-date`"
 AC_SUBST(BUILD_DATE)
 
+SLINDAK_SONAME=0
+AC_SUBST(SLINDAK_SONAME)
+
 AC_SUBST(AM_CFLAGS, "\
 	-g -Wall -std=c89 \
 	-I\$(top_srcdir) \
