--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,17 +1,24 @@
 bin_PROGRAMS = slindak
+lib_LTLIBRARIES = libslindak.la
 
-slindak_SOURCES = \
-	slindak.c db.c \
+libslindak_la_SOURCES = \
+	db.c           \
 	overrides.c    \
 	debfile.c      \
 	slind.c        \
-	lua.c          \
 	util.c         \
-	output.c       \
+	output.c
+libslindak_la_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
+libslindak_la_LDFLAGS = -Wl,-soname=$(SLINDAK_SONAME)
+
+slindak_SOURCES = \
+	slindak.c      \
+	lists.c        \
+	lua.c          \
 	messages.c     \
 	package.c      \
 	pool.c         \
 	configuration.c
 slindak_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
-slindak_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS)
+slindak_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS) -lslindak
 
